# outpost

./: .air.toml  .env.example  .env.test  .gitignore  .outpost.yaml.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REDIS_MIGRATION.md  ROADMAP.md  docker-compose.yml  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  sdk_generation_outpost_go.yaml  sdk_generation_outpost_python.yaml  sdk_generation_outpost_ts.yaml  sdk_publish_outpost_go.yaml  sdk_publish_outpost_python.yaml  sdk_publish_outpost_ts.yaml  unit-tests.yml  update-compose-version.yml
.plans/: 2025-05-26-config-documentation-synchronization.md
.plans/redis-error/: README.md  reproduce_redis_execabort.sh  reproduce_redis_execabort_simple.md
.speakeasy/: workflow.yaml
cmd/api/: main.go
cmd/app/: main.go
cmd/configdocsgen/: main.go
configs/: Dockerfile  api.Dockerfile  data.Dockerfile  delivery.Dockerfile
contributing/: destinations.md  mq.md  test.md
docs/: .gitignore  README.md  package-lock.json  package.json  vercel.json  vite.config.ts  zudoku.config.ts
examples/: README.md
examples/sdk-python/: README.md  app.py  pyproject.toml
examples/sdk-python/example/: auth.py  create_destination.py  publish_event.py
loadtest/: compose.yml  package-lock.json  package.json  run-test.sh  tsconfig.json
scripts/: README.md  migrate-redis-keys.sh  test-hash-slots.sh  test-setup-info.sh  test-transactions.sh
test/: clean.sh  quickstart.sh  server.py
website/: README.md  package-lock.json  package.json  vercel.json
(+1818 files in other folders)
